fix: kanji table overflow

--- a/src/styles/components/_kanji.scss
+++ b/src/styles/components/_kanji.scss
@@ -46,7 +46,6 @@
 
   .examples-ja {
     padding-right: 0.5em;
-    max-width: 3em;
   }
 
   $side: 5em;
